Bug #39038
beast: multiple v4 and v6 endpoints with the same port will cause failure
0%
Description
currently the following combinations are known to fail:
rgw frontends = beast endpoint=[::]:8000 endpoint=0.0.0.0:8000
rgw frontends = beast port=8000 endpoint=[::]:8000
with something like:
2019-03-29 17:22:29.728 7f15db9e9900 4 frontend listening on 0.0.0.0:8000 2019-03-29 17:22:29.728 7f15db9e9900 -1 failed to bind address [::]:8000: Address already in use
As the systemflag for bindv6only (cat /proc/sys/net/ipv6/bindv6only to check) is usually true for many Linux systems, specifying both v4 and v6 addresses will mean that configuration has to be aware of the flag and set only v6 for eg. A better behaviour here would be to be explicit here and only bind to v4 or v6 addresses as configured so that configuration remains explicit.
Related issues
History
#1 Updated by Matt Benjamin about 2 years ago
@abhishek, is there a strong reason not to backport as far as luminous?
Matt
#2 Updated by Abhishek Lekshmanan about 2 years ago
- Backport changed from nautilus to nautilus, mimic
for luminous the only thing was beast was an experimental feature, otherwise I can mark it for l as well, given that people upgrading from luminous -> nautilus then can get by without needing to change the configuration.
#3 Updated by Casey Bodley about 2 years ago
- Backport changed from nautilus, mimic to nautilus, mimic, luminous
i've been backporting other beast features (ie ssl support) to luminous anyway to encourage early adoption - tagged for backport
#4 Updated by Matt Benjamin about 2 years ago
- Status changed from New to 7
#5 Updated by Casey Bodley almost 2 years ago
- Backport changed from nautilus, mimic, luminous to nautilus
#6 Updated by Nathan Cutler almost 2 years ago
- Pull request ID set to 27270
#7 Updated by Casey Bodley almost 2 years ago
- Duplicated by Bug #39321: rgw: Beast frontend listens on IPv4 only by default added
#8 Updated by Casey Bodley almost 2 years ago
- Status changed from 7 to Pending Backport
#9 Updated by Nathan Cutler almost 2 years ago
- Copied to Backport #39746: nautilus: beast: multiple v4 and v6 endpoints with the same port will cause failure added
#10 Updated by Nathan Cutler almost 2 years ago
- Status changed from Pending Backport to Resolved